@@ -5,12 +5,11 @@
 
     <groupId>dev.uncomplex</groupId>
     <artifactId>uncomplex-server</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
 
-    <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+    <properties> 
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>dev.uncomplex.server.Main</exec.mainClass>
     </properties>
@@ -24,13 +23,13 @@
     </repositories>
 
     <dependencies>
-        
+
         <dependency>
             <groupId>dev.uncomplex</groupId>
             <artifactId>uncomplex-json</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-      
+            <version>1.0.2</version>
+        </dependency>          
+        
         <dependency>
             <groupId>dev.uncomplex</groupId>
             <artifactId>uncomplex-jwt</artifactId>
@@ -39,11 +38,10 @@
 
         <dependency>
             <groupId>dev.uncomplex</groupId>
-            <artifactId>uncomplex-properties</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-     
-        
+            <artifactId>uncomplex-env</artifactId>
+            <version>1.0.1</version>
+        </dependency>        
+                        
         <!-- testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -59,18 +57,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
 
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.0</version>
                 <configuration>
                     <archive>
                         <manifest>
